--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <table cellspacing="10">
                 <tr>
                     <td>
-                        <img src="profile_photo.png" width="250" height="250">
+                        <img src="profile_photo.png"  alt="atreo photo" width="250" height="250">
                     </td>
                     <td>
                         <h1> Atreo Jae Cabalu</h1>
